--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DSSuperFit</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="container">
+            <div class="nav-left">
+                <h1>DSSuperFit</h1>
+            </div>
+            <div class="nav-right">
+                <img src="img/instagram.png" alt="Instagram">
+                <a href="#">@DSSuperFit</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
