Section meet-our-space done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>DSSuperFit</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <nav class="container">
@@ -19,5 +21,25 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section id="meet-our-space">
+            <div class="container">
+                <h2>Conheça nosso espaço</h2>
+                <div class="space-card">
+                    <h3>Espaço fitness</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+                <div class="space-card">
+                    <h3>Espaço fitness</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
