--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container-footer">
+            <div class="footer-social-media">
+                <a href="#"><img src="img/instagram.png" alt="Instagram">@DSSuperFit</a>
+                <a href="#"><img src="img/twitter.png" alt="Twitter">/DSSuperFit</a>
+            </div>
+            <div class="footer-address">
+                <p>Todos direitos reservados.</p>
+                <address>Rua da Pipoca, 150</address>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
